fix: incorrect z-index in works section

--- a/src/scss/sections/works.scss
+++ b/src/scss/sections/works.scss
@@ -418,7 +418,6 @@
         height: 100vh;
         width: 100%;
         overflow: hidden;
-        z-index: 500;
     }
 }
 
